--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
       <div class="list">
         <ul>
           <li class="home"><a href="#">HOME</a></li>
-          <li class="sevices"><a href="#">SERVICES</a></li>
+          <li class="sevices"><a href="#">SERVICE</a></li>
           <li class="sevices"><a href="#">OUR TEAM</a></li>
           <li class="about"><a href="#">ABOUT US</a></li>
           <li class="contact"><a href="#">CONTACT US</a></li>
